Added recipe to duplicate multiversal extrapolators